--- a/views/patrol-report-submit.ejs
+++ b/views/patrol-report-submit.ejs
@@ -268,6 +268,20 @@
                     name="confirmRid"
                   />
 
+                  <input
+                    type="text"
+                    style="display: none"
+                    value="<%= currentTime %>"
+                    name="currentTime"
+                  />
+
+                  <input
+                    type="text"
+                    style="display: none"
+                    value="<%= currentDate %>"
+                    name="currentDate"
+                  />
+
                   <!-- Submit button -->
                   <div class="col-12">
                     <button
